PROJECT(Ballet_Build)
ADD_SUBDIRECTORY(Libs/LoTrace LoTrace)
ADD_SUBDIRECTORY(Libs/IniLoader IniLoader)
ADD_SUBDIRECTORY(Libs/MessagePack MessagePack)
ADD_SUBDIRECTORY(Ballet Ballet)
ADD_SUBDIRECTORY(Zeus Zeus)
ADD_SUBDIRECTORY(Test Test)
ADD_SUBDIRECTORY(TestClient TestClient)
ADD_SUBDIRECTORY(TestServer TestServer)
