PROJECT(Ballet)
include_directories("${PROJECT_SOURCE_DIR}/..")
include_directories("${PROJECT_SOURCE_DIR}")
AUX_SOURCE_DIRECTORY(./Common dir_srcs)
AUX_SOURCE_DIRECTORY(./BootUtil dir_srcs)
AUX_SOURCE_DIRECTORY(./ServiceWorker dir_srcs)
AUX_SOURCE_DIRECTORY(./Network dir_srcs)
AUX_SOURCE_DIRECTORY(./Protocol dir_srcs)
AUX_SOURCE_DIRECTORY(./Protocol/Arp dir_srcs)
AUX_SOURCE_DIRECTORY(./Protocol/Telnet dir_srcs)
AUX_SOURCE_DIRECTORY(./Protocol/Http dir_srcs)
AUX_SOURCE_DIRECTORY(./Protocol/Lfv dir_srcs)
set (CMAKE_CXX_FLAGS "-fpermissive ${CMAKE_CXX_FLAGS}")
ADD_LIBRARY(Ballet SHARED ${dir_srcs})
TARGET_LINK_LIBRARIES(Ballet pthread)
