PROJECT(ZeusCollocation)
include_directories( "${PROJECT_SOURCE_DIR}")
include_directories( "${PROJECT_SOURCE_DIR}/..")
include_directories( "${PROJECT_SOURCE_DIR}/../..")
include_directories( "${PROJECT_SOURCE_DIR}/../../Ballet")
include_directories( "${PROJECT_SOURCE_DIR}/../../Libs/MessagePack")
include_directories( "${PROJECT_SOURCE_DIR}/../../Libs/RapidXml")
AUX_SOURCE_DIRECTORY(. srcs)
LINK_DIRECTORIES (
	"${PROJECT_SOURCE_DIR}/../../Build/Ballet"
)
ADD_EXECUTABLE(ZeusCollocation ${srcs})
set (CMAKE_CXX_FLAGS "-fpermissive ${CMAKE_CXX_FLAGS}")
TARGET_LINK_LIBRARIES(ZeusCollocation Ballet)
TARGET_LINK_LIBRARIES(ZeusCollocation IniLoader)
TARGET_LINK_LIBRARIES(ZeusCollocation MessagePack)
TARGET_LINK_LIBRARIES(ZeusCollocation ZeusBase)
