PROJECT(ZeusWisdom)
include_directories( "${PROJECT_SOURCE_DIR}")
include_directories( "${PROJECT_SOURCE_DIR}/..")
include_directories( "${PROJECT_SOURCE_DIR}/../..")
include_directories( "${PROJECT_SOURCE_DIR}/../../Ballet")
include_directories( "${PROJECT_SOURCE_DIR}/../../Libs/MessagePack")
include_directories( "${PROJECT_SOURCE_DIR}/../../Libs/RapidXml")
include_directories( "${PROJECT_SOURCE_DIR}/../../Libs/LevelDB/include")
AUX_SOURCE_DIRECTORY(. srcs)
AUX_SOURCE_DIRECTORY(./ZsDataBase srcs)
AUX_SOURCE_DIRECTORY(./ZsDataStore srcs)
AUX_SOURCE_DIRECTORY(./ZsNodeServer srcs)
AUX_SOURCE_DIRECTORY(./ZsWorkboard srcs)
LINK_DIRECTORIES (
	"${PROJECT_SOURCE_DIR}/../../Build/Ballet"
	"${PROJECT_SOURCE_DIR}/../../Libs/LevelDB/out-static"
)
ADD_EXECUTABLE(ZeusWisdom ${srcs})
set (CMAKE_CXX_FLAGS "-fpermissive ${CMAKE_CXX_FLAGS}")
TARGET_LINK_LIBRARIES(ZeusWisdom Ballet)
TARGET_LINK_LIBRARIES(ZeusWisdom IniLoader)
TARGET_LINK_LIBRARIES(ZeusWisdom MessagePack)
TARGET_LINK_LIBRARIES(ZeusWisdom ZeusBase)
TARGET_LINK_LIBRARIES(ZeusWisdom leveldb)
